--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
-                android:text="@string/editLogin" />
+                android:hint="@string/editLogin" />
 
         </LinearLayout>
 
@@ -40,7 +40,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
-                android:text="@string/editPassword" />
+                android:hint="@string/editPassword" />
         </LinearLayout>
 
         <LinearLayout
@@ -61,13 +61,6 @@
             android:layout_height="100dp"
             android:orientation="vertical">
 
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:text="@string/indication"
-                android:textSize="24sp"/>
         </LinearLayout>
     </LinearLayout>
 
