--- a/app/src/main/res/layout/activity_calcul_scientifique.xml
+++ b/app/src/main/res/layout/activity_calcul_scientifique.xml
@@ -29,7 +29,66 @@
         android:text="0"
         android:textSize="24sp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        android:padding="4dp">  <!-- ✅ Padding instead of button margins -->
 
+        <Button
+            android:id="@+id/btnSin"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/sin"
+            android:textSize="10sp"
+            android:layout_margin="2sp"
+
+            android:backgroundTint="#65B0FA"/>
+
+        <Button
+            android:id="@+id/btnCos"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cos"
+            android:textSize="10sp"
+            android:layout_margin="2dp"
+            android:backgroundTint="#65B0FA"/>
+
+        <Button
+            android:id="@+id/btnTan"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/tan"
+            android:textSize="10sp"
+            android:layout_margin="2dp"
+            android:backgroundTint="#65B0FA"/>
+
+        <Button
+            android:id="@+id/btnLn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/ln"
+            android:textSize="10sp"
+            android:layout_margin="2dp"
+            android:backgroundTint="#65B0FA"/>
+
+        <Button
+            android:id="@+id/btnExp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/exp"
+            android:textSize="10sp"
+            android:layout_margin="2dp"
+            android:backgroundTint="#65B0FA"/>
+
+
+
+    </LinearLayout>
 
 
     <LinearLayout
@@ -56,7 +115,6 @@
             android:text="@string/c"
             android:backgroundTint="#4169E1"
             android:layout_margin="2dp"/>
-
         <Button
             android:id="@+id/buttonDel"
             android:layout_width="0dp"
@@ -67,6 +125,7 @@
             android:backgroundTint="#FF9800"
 
             android:textColorLink="#FF9800" />
+
         <Button
             android:id="@+id/buttonDiv"
             android:layout_width="0dp"
@@ -75,6 +134,8 @@
             android:text="@string/div"
             android:backgroundTint="#FF9800"
             android:layout_margin="2dp"/>
+
+
 
 
     </LinearLayout>
